@@ -1,3 +1,7 @@
+2008-01-14  Wakaba  <wakaba@suika.fam.cx>
+
+	* SelectorsSerializer.pm (serialize_selector_text): New method.
+
 2008-01-12  Wakaba  <wakaba@suika.fam.cx>
 
 	* Parser.pm: 'opacity' and '-moz-opacity' are implemented.
